--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </head>
   <body>
     <div class="name">ЕГОР ПАРАМОНОВ</div>
-<div class="name2">QA Engeneer</div>
+<div class="name2">QA Engineer</div>
     <div class="block">
       <div class="block-title">связаться:</div>
       <div class="block-entries">
