--- a/index.html
+++ b/index.html
@@ -59,5 +59,205 @@
         </div>
       </div>
     </div>
+    <div id="static-form-container" data-url="https://cp.selzy.com/en/v5/subscribe-form/view/66ieguxref8ucqapq9qcijbyuwe8qdtc9zbpo3sy" data-settings="6z9axsmp4is5da6o8g64e1kxsna1ruioyoz3e737xmkyin79n9uco" style="display: none">
+<div class="bee-popup-container">
+	<style>
+		.bee-popup-container div,
+		.bee-popup-container form {
+			margin: 0;
+			padding: 0
+		}
+
+		.bee-popup-container input {
+			font-family: inherit;
+			font-size: inherit;
+			font-weight: inherit
+		}
+
+		.bee-popup-container {
+			color: #000000;
+			font-family: Arial, Helvetica Neue, Helvetica, sans-serif
+		}
+
+		.bee-popup-container * {
+			box-sizing: border-box
+		}
+
+		.bee-popup-container .bee-popup-row {
+			position: relative
+		}
+
+		.bee-popup-container .bee-popup-row-content {
+			max-width: 500px;
+			position: relative;
+			margin: 0 auto;
+			display: flex
+		}
+
+		.bee-popup-container .bee-popup-row-content .bee-popup-col-w12 {
+			flex: 12
+		}
+
+		.bee-popup-row-1 .bee-popup-col-1 .bee-popup-block-1 .bee-popup-button-container {
+			text-align: center
+		}
+
+		.bee-popup-row-1 .bee-popup-col-1 .bee-popup-block-1 .bee-popup-form-row:not(.bee-popup-sidelabel) input:not([type=checkbox]):not([type=radio]) {
+			width: 100%
+		}
+
+		.bee-popup-form .bee-popup-form-row .bee-popup-field {
+			padding: 3px;
+			display: flex;
+			flex: 1;
+			flex-wrap: wrap;
+			align-items: center
+		}
+
+		.bee-popup-form .bee-popup-form-row .bee-popup-field input:not([type=checkbox]):not([type=radio]) {
+			flex-grow: 1;
+			font-family: inherit;
+			font-size: inherit
+		}
+
+		.bee-popup-form .bee-popup-form-row .bee-popup-field button {
+			font-family: inherit;
+			font-size: inherit
+		}
+
+		.bee-popup-form .bee-popup-form-row .bee-popup-field .bee-popup-button-container {
+			flex-grow: 1
+		}
+
+		@media (max-width:520px) {
+			.bee-popup-form form {
+				width: 100% !important
+			}
+
+			.bee-popup-row-content:not(.no_stack) {
+				display: block;
+				max-width: 250px
+			}
+		}
+
+		.bee-popup-row-1 {
+			background-repeat: no-repeat
+		}
+
+		.bee-popup-row-1 .bee-popup-row-content {
+			background-repeat: no-repeat;
+			color: #000000
+		}
+
+		.bee-popup-row-1 .bee-popup-col-1 {
+			padding-bottom: 5px;
+			padding-top: 5px
+		}
+
+		.bee-popup-row-1 .bee-popup-col-1 .bee-popup-block-1 {
+			font-family: inherit;
+			font-size: 14px;
+			padding: 10px;
+			text-align: center
+		}
+
+		.bee-popup-row-1 .bee-popup-col-1 .bee-popup-block-1 form {
+			display: inline-block;
+			width: 100%
+		}
+
+		.bee-popup-row-1 .bee-popup-col-1 .bee-popup-block-1 div.label,
+		.bee-popup-row-1 .bee-popup-col-1 .bee-popup-block-1 label {
+			color: #606060;
+			line-height: 200%;
+			text-align: left;
+			display: block
+		}
+
+		.bee-popup-row-1 .bee-popup-col-1 .bee-popup-block-1 div.label:not(.inline),
+		.bee-popup-row-1 .bee-popup-col-1 .bee-popup-block-1 label:not(.inline) {
+			flex-basis: 100%
+		}
+
+		.bee-popup-row-1 .bee-popup-col-1 .bee-popup-block-1 ::-webkit-input-placeholder {
+			color: #000000
+		}
+
+		.bee-popup-row-1 .bee-popup-col-1 .bee-popup-block-1 :-moz-placeholder {
+			color: #000000
+		}
+
+		.bee-popup-row-1 .bee-popup-col-1 .bee-popup-block-1 ::-moz-placeholder {
+			color: #000000
+		}
+
+		.bee-popup-row-1 .bee-popup-col-1 .bee-popup-block-1 :-ms-input-placeholder {
+			color: #000000
+		}
+
+		.bee-popup-row-1 .bee-popup-col-1 .bee-popup-block-1 .bee-popup-field>label:first-child,
+		.bee-popup-row-1 .bee-popup-col-1 .bee-popup-block-1 div.label {
+			padding: 3px
+		}
+
+		.bee-popup-row-1 .bee-popup-col-1 .bee-popup-block-1 input:not([type=checkbox]):not([type=radio]):not([type=image]) {
+			background-color: #ffffff;
+			border-bottom: 1px solid #E7EBEE;
+			border-left: 1px solid #E7EBEE;
+			border-radius: 4px;
+			border-right: 1px solid #E7EBEE;
+			border-top: 1px solid #E7EBEE;
+			color: #000000;
+			padding: 5px;
+			min-height: 38px
+		}
+
+		.bee-popup-row-1 .bee-popup-col-1 .bee-popup-block-1 input:not([type=checkbox]):not([type=radio]):focus {
+			outline-color: #3AAEE0
+		}
+
+		.bee-popup-row-1 .bee-popup-col-1 .bee-popup-block-1 button {
+			background-color: #b22c29;
+			border-bottom: 0 solid transparent;
+			border-left: 0 solid transparent;
+			border-radius: 14px;
+			border-right: 0px solid transparent;
+			border-top: 0 solid transparent;
+			color: #ffffff;
+			line-height: 200%;
+			padding: 5px 20px;
+			width: 100%
+		}
+	</style>
+	<div class="bee-popup-rows-container">
+		<div class="bee-popup-row bee-popup-row-1">
+			<div class="bee-popup-row-content">
+				<div class="bee-popup-col bee-popup-col-1 bee-popup-col-w12">
+					<div class="bee-popup-block bee-popup-block-1 bee-popup-form">
+						<form action="https://cp.selzy.com/en/subscribe?hash=6gfxu3mk7dni9w6o8g64e1kxsn3eb4r4ci6168s5grsg17hkdgr5o" method="POST" name="subscription_form">
+							<div class="bee-popup-form-row">
+								<div class="bee-popup-field bee-popup-field-r0c0m0i1"><label for="r0c0m0i1">Email</label><input id="r0c0m0i1" name="email" type="text" required="required"></div>
+							</div>
+							<div class="bee-popup-form-row">
+								<div class="bee-popup-field bee-popup-field-r0c0m0i3"><label for="r0c0m0i3">Nome e Sobrenome</label><input id="r0c0m0i3" name="Name" type="text" required="required"></div>
+							</div>
+							<div class="bee-popup-form-row">
+								<div class="bee-popup-field bee-popup-field-r0c0m0i4"><label for="r0c0m0i4"> </label>
+									<div class="bee-popup-button-container"><button id="r0c0m0i4" name="submit" type="submit" value="Quero receber novidades!">Quero receber novidades!</button></div>
+								</div>
+							</div>
+						<input type="hidden" name="charset" value="UTF-8"><input type="hidden" name="overwrite" value="2"><input type="hidden" name="is_v5" value="1"><input type="hidden" name="list_ids[]" value="71"></form>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+</div>
+<script src="https://sf2df4j6wzf.s3.eu-central-1.amazonaws.com/popups/popup.js"></script>
+<script>
+  window.popupForSubscriptionsForm("https://apig.selzy.com");
+</script>
   </body>
 </html>
